feat: new components

--- a/docs/component/1.md
+++ b/docs/component/1.md
@@ -48,7 +48,7 @@
 </template>
 
 <script lang="ts">
-  import {Button} from '@wanmaoor/giaoui'
+  import {Button} from '@hasnking98/king-ui'
   import {Component, Vue} from "vue-property-decorator"
 
   @Component({
