--- a/docs/component/2.md
+++ b/docs/component/2.md
@@ -28,7 +28,7 @@
 </template>
 
 <script>
-import {Tab TabPanel}from "@wanmaoor/giaoui"
+import {Tab TabPanel}from "@hasnking98/king-ui"
 
 export default {
   name: "tab-demo"
@@ -91,7 +91,7 @@ export default {
 </template>
 
 <script>
-import {Tab TabPanel}from "@wanmaoor/giaoui"
+import {Tab TabPanel}from "@hasnking98/king-ui"
 
 export default {
   name: "tab-demo-1"
@@ -154,7 +154,7 @@ export default {
 </template>
 
 <script>
-import {Tab TabPanel}from "@wanmaoor/giaoui"
+import {Tab TabPanel}from "@hasnking98/king-ui"
 
 export default {
   name: "tab-demo-2",
