--- a/docs/component/3.md
+++ b/docs/component/3.md
@@ -42,7 +42,7 @@
 </template>
 
 <script lang="ts">
-  import {Collapse, CollapseItem} from '@wanmaoor/giaoui'
+  import {Collapse, CollapseItem} from '@hasnking98/king-ui'
   import {Component, Vue} from "vue-property-decorator"
 
   @Component({
