--- a/docs/component/4.md
+++ b/docs/component/4.md
@@ -19,7 +19,7 @@
 </template>
 
 <script lang="ts">
-  import {Button, Message} from "@wanmaoor/giaoui"
+  import {Button, Message} from "@hasnking98/king-ui"
   import {Component, Vue} from "vue-property-decorator"
 
   Vue.use(Message)
