--- a/docs/component/5.md
+++ b/docs/component/5.md
@@ -39,7 +39,7 @@
 </template>
 
 <script>
-  import {Tooltip, Button} from "@wanmaoor/giaoui"
+  import {Tooltip, Button} from "@hasnking98/king-ui"
   export default {
   	name: "Tooltips",
   	components: {Button, Tooltip}
