--- a/docs/component/6.md
+++ b/docs/component/6.md
@@ -21,7 +21,7 @@
 </template>
 
 <script>
-  import {Dialog, Button} from "@wanmaoor/giaoui"
+  import {Dialog, Button} from "@hasnking98/king-ui"
 	
   export default {
     name: "Dialogs",
