--- a/docs/component/7.md
+++ b/docs/component/7.md
@@ -20,7 +20,7 @@
 </template>
 
 <script>
-import { Carousel, CarouselItem } from "@wanmaoor/giaoui";
+import { Carousel, CarouselItem } from "@hasnking98/king-ui";
 export default {
   name: "carousel-demo",
   components: { Carousel, CarouselItem }
@@ -48,7 +48,7 @@ export default {
 </template>
 
 <script>
-import { Carousel, CarouselItem } from "@wanmaoor/giaoui";
+import { Carousel, CarouselItem } from "@hasnking98/king-ui";
 export default {
   name: "carousel-demo",
   components: { Carousel, CarouselItem }
@@ -78,7 +78,7 @@ export default {
 </template>
 
 <script>
-import { Carousel, CarouselItem } from "@wanmaoor/giaoui";
+import { Carousel, CarouselItem } from "@hasnking98/king-ui";
 
 export default {
   name: "carousel-demo-2",
@@ -119,7 +119,7 @@ export default {
 </template>
 
 <script>
-import { Carousel, CarouselItem } from "@wanmaoor/giaoui";
+import { Carousel, CarouselItem } from "@hasnking98/king-ui";
 
 export default {
   name: "carousel-demo-3",
@@ -150,7 +150,7 @@ export default {
 </template>
 
 <script>
-import { Carousel, CarouselItem } from "@wanmaoor/giaoui";
+import { Carousel, CarouselItem } from "@hasnking98/king-ui";
 
 export default {
   name: "carousel-demo-4",
